--- a/lists/README
+++ b/lists/README
@@ -2,3 +2,4 @@
 ### Credits
 * ospd.txt - Scrabble Dictionary from the [National Puzzler's League website](http://www.puzzlers.org/dokuwiki/doku.php?id=solving:wordlists:about:start)
 * web2.txt - List from Webster's New International Dictionary, Second Edition from the [National Puzzler's League website](http://www.puzzlers.org/dokuwiki/doku.php?id=solving:wordlists:about:start)
+* week.txt - A list of the days of the week I made, has a low number of entries so it can be loaded quickly. Used to reduce wordlist loading before I test those features.
